examples/invalid/ns/hello_bad_use_unit.ns
use shader UnknownUnit;

mod cpu Main {
  fn main() {
    print(1);
  }
}
